@@ -1836,6 +1836,7 @@ timeout     = 0
 #                                                     If you intend to run Windows 3.1 in DOSBox-X, you must set this option to false else Windows 3.1 will not start.
 #                                 keep umb on boot: If emulating UMBs, keep the UMB around after boot (Mainline DOSBox behavior). If clear, UMB is unmapped when you boot an operating system.
 #                        keep private area on boot: If set, keep the DOSBox-X private area around after boot (Mainline DOSBox behavior). If clear, unmap and discard the private area when you boot an operating system.
+#                                                     Possible values: true, false, 1, 0, auto.
 #                              private area in umb: If set, keep private DOS segment in upper memory block, usually segment 0xC800 (Mainline DOSBox behavior)
 #                                                     If clear, place private DOS segment at the base of system memory (just below the MCB)
 #                                     quick reboot: If set, the DOS restart call will reboot the emulated DOS (integrated DOS or guest DOS) instead of the virtual machine.
@@ -1950,7 +1951,7 @@ umb start                                        = 0
 umb end                                          = 0
 kernel allocation in umb                         = false
 keep umb on boot                                 = false
-keep private area on boot                        = false
+keep private area on boot                        = auto
 private area in umb                              = true
 quick reboot                                     = false
 ver                                              = 
